# tdi

./: .gitignore  Cargo.toml  LICENSE  PRIVACY.md  README.md  SECURITY.md  bom.xml  rustfmt.toml
.github/workflows/: rust.yml
docs/: design.md
src/: auth.rs  cli.rs  helper.rs  lists.rs  main.rs  tasks.rs  tasksv2.rs  user.rs
tests/: cli.rs
